# javad

./: .gitignore  README.md  javadtop20_infer.py  pyproject.toml  readthedocs.yaml  requirements.txt  setup.py
docs/source/: conf.py  extras.rst  index.rst  main.rst  requirements.txt
src/javad/: __init__.py  main.py  main_whisper.py  processor.py  stream.py  utils.py
src/javad/assets/: balanced.pt  tiny.pt
src/javad/extras/: __init__.py  audio.py  basic.py  trainer.py
src/javad/whisper/: model.py
tests/files/: ranger-bill.flac
